# edge-subscription-service-sdk-c

./: .gitignore  CMakeLists.txt  clean_all_cmake_tmp.sh  readme.md
3rd/: CMakeLists.txt
3rd/include/nsq/: nsq.h
3rd/src/evbuffsock/: CMakeLists.txt  buffer.c  buffered_socket.c
3rd/src/nsq/: CMakeLists.txt  http.c  message.c  nsqd_connection.c  nsqlookupd.c  reader.c
inc/: CMakeLists.txt
inc/edge_service_c_api/: dataservice.h  edge_common.h  edge_service_c_api.h
lib/edge_service_c_api/: CMakeLists.txt  common.c  dataservice.c
lib/edge_service_c_api/protobuf/controlresponsedata/: controlresponsepoint.pb-c.c  controlresponsepoint.pb-c.h
lib/edge_service_c_api/protobuf/setmeasurepointresponsedata/: setmeasurepointresponsepoint.pb-c.c  setmeasurepointresponsepoint.pb-c.h
lib/edge_service_c_api/protobuf/ssrecorddata/: ssrecordpoint.pb-c.c  ssrecordpoint.pb-c.h  ssrecordpoint.proto
lib/edge_service_c_api/protobuf/subdata/: subdata.pb-c.c  subdata.pb-c.h  subdata.proto
resources/: edge_dataservice_benchmark_test.sh  edge_dataservice_control_response_msg_test.sh  edge_dataservice_custom_msg_test.sh  edge_dataservice_pub_benchmark_test.sh  edge_dataservice_pub_test.sh  edge_dataservice_set_measurepoint_response_msg_test.sh  edge_dataservice_simple_subscribe_msg_test.sh  edge_dataservice_subscribe_msg_test.sh  edge_dataservice_test.sh
support/linux_armv8_centos7_64_local/: generate_soft_link.sh
support/linux_armv8_centos7_64_local/include/openssl/: opensslconf.h
support/linux_armv8_centos7_64_local/lib/: libcjson.so.1.7.7  libcjson_utils.so.1.7.7  libcrypto.so.1.1  libcurl.so.4.5.0  libev.so.4.0.0  libjansson.so.4.11.1  libprotobuf-c.so.1.0.0  libssl.so.1.1
support/linux_x86_centos6_32_local/lib/: libev.so.4.0.0  libjansson.so.4.11.1  libprotobuf-c.so.1.0.0
support/linux_x86_normal_64_local/lib/: libev.so.4.0.0  libjansson.so.4.11.1  libprotobuf-c.so.1.0.0
test/edge_service_c_api_test/edge_dataservice_benchmark_test/: edge_dataservice_benchmark_test.cpp
test/edge_service_c_api_test/edge_dataservice_control_response_msg_test/: edge_dataservice_control_response_msg_test.cpp
test/edge_service_c_api_test/edge_dataservice_custom_msg_test/: edge_dataservice_custom_msg_test.cpp
test/edge_service_c_api_test/edge_dataservice_pub_benchmark_test/: CMakeLists.txt  edge_dataservice_pub_benchmark_test.cpp
test/edge_service_c_api_test/edge_dataservice_pub_test/: edge_dataservice_pub_test.cpp
test/edge_service_c_api_test/edge_dataservice_set_measurepoint_response_msg_test/: edge_dataservice_set_measurepoint_response_msg_test.cpp
test/edge_service_c_api_test/edge_dataservice_simple_subscribe_msg_test/: edge_dataservice_subscribe_msg_test.cpp
test/edge_service_c_api_test/edge_dataservice_subscribe_msg_test/: edge_dataservice_subscribe_msg_test.cpp
test/edge_service_c_api_test/edge_dataservice_test/: edge_dataservice_test.cpp
